fix: safari flickering on logo

--- a/studio/src/app/components/core/app-logo/app-logo.scss
+++ b/studio/src/app/components/core/app-logo/app-logo.scss
@@ -1,18 +1,18 @@
 div {
   color: transparent;
 
-  vertical-align: var(--deckgo-logo-vertical-align);
   margin-right: var(--deckgo-logo-margin-end);
-
-  background-color: transparent;
-  background-image: var(--deckgo-logo-url, url('/assets/img/deckdeckgo-logo-round.svg'));
-  background-repeat: no-repeat;
-
-  width: var(--deckgo-logo-size, 2rem);
-  height: var(--deckgo-logo-size, 2rem);
 
   border-radius: 50%;
   border: 1px solid white;
 
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: var(--ion-color-primary);
+
+  ion-icon {
+    font-size: var(--deckgo-logo-size, 2rem);
+  }
 }
