--- a/studio/src/global/theme/variables.scss
+++ b/studio/src/global/theme/variables.scss
@@ -85,4 +85,8 @@
   ion-popover, ion-modal {
     --ion-background-color: white;
   }
+
+  ion-menu-toggle {
+    color: var(--ion-color-light);
+  }
 }
